Fixing height as well on small logos and moving platinums to big logo

--- a/themes/openstack/scss/supporting-organizations.scss
+++ b/themes/openstack/scss/supporting-organizations.scss
@@ -1,5 +1,6 @@
 .small_logo_tiny{
   max-width: 120px !important;
+  max-height: 107px !important;
   padding: 10px;
 }
 
